--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -14,23 +14,23 @@
                 <i class="fas fa-home text-white-50"></i>&nbsp;<a href="/">HOME</a>
             </li>
             {% menu %}
-            <li class="list-group-item mt-4 d-flex menu-list bg-transparent">
+            <li class="list-group-item mt-4 d-flex align-items-center menu-list bg-transparent">
                 <i class="fas fa-search text-success">&nbsp;</i>&nbsp;<a role="button" class="btn btn-link text-decoration-none text-white p-0 font-weight-bold" data-toggle="modal" data-target="#searchModal">SEARCH</a>
             </li>
         </ul>
         <ul class="list-unstyled list-group font-weight-bold fixed-bottom list-group-horizontal" id="login">
             {% if not request.user.is_authenticated %}
-            <li class="{% if 'login/' in request.path  %}active {% endif %}align-items-center d-flex list-group-item flex-fill rounded-0" style="background-color:#6b8872;">
+            <li class="{% if 'login/' in request.path  %}active {% endif %}align-items-center justify-content-center d-flex list-group-item flex-fill rounded-0" style="background-color:#6b8872;">
                 <a href="{% url 'accounts:login' %}" class="text-center">LOGIN</a>
             </li>
-            <li class="{% if 'signup/' in request.path  %}active {% endif %}align-items-center d-flex list-group-item flex-fill rounded-0" style="background-color:#f47e3a;">
+            <li class="{% if 'signup/' in request.path  %}active {% endif %}align-items-center justify-content-center d-flex list-group-item flex-fill rounded-0" style="background-color:#f47e3a;">
                 <a href="{% url 'accounts:signup' %}" class="text-center">SIGN UP</a>
             </li>
             {% else %}
-            <li class="{% if 'account/dashboard/' in request.path  %}active {% endif %}align-items-center d-flex list-group-item flex-fill rounded-0" style="background-color:#6b8872;">
+            <li class="{% if 'account/dashboard/' in request.path  %}active {% endif %}align-items-center justify-content-center d-flex list-group-item flex-fill rounded-0" style="background-color:#6b8872;">
                 <a href="{% url 'accounts:account-home' %}" class="text-center">MY ACCOUNT</a>
             </li>
-            <li class="{% if 'logout/' in request.path  %}active {% endif %}align-items-center d-flex list-group-item flex-fill rounded-0" style="background-color:#f47e3a;">
+            <li class="{% if 'logout/' in request.path  %}active {% endif %}align-items-center justify-content-center d-flex list-group-item flex-fill rounded-0" style="background-color:#f47e3a;">
                 <a href="{% url 'accounts:logout' %}" class="text-center">LOGOUT</a>
             </li>
             {% endif %}
@@ -109,7 +109,7 @@
                             </div>
                             <p class="text-muted search-help-text font-italic">please try to specific with search. e.g cargo pants.</p>
                         </form>
-                        <transition enter-active-class="animate__animated animate__fadeIn" enter-active-class="animate__animated animate__fadeOut">
+                        <transition appear mode="out-in" enter-active-class="animate__animated animate__fadeIn" leave-active-class="animate__animated animate__fadeOut">
                             <p class="text-right search-help-text text-muted font-italic" key="info" v-if="sortedTrousers.length > 0">[[ sortedTrousers.length ]] result(s) found.</p>
                             <p class="text-right search-help-text text-muted font-italic" key="emptyinfo"cv-else>[[ sortedTrousers.length ]] result(s) found.</p>
                         </transition>
@@ -118,15 +118,14 @@
                                 <i class="animate__animated animate__bounce animate__slow animate__infinite text-success bg-warning rounded-circle p-4 fas fa-3x text-white fa-search"></i>
                                 <p class="text-muted font-italic">loading...</p>
                             </div>
-                            <div v-if="!loading && sortedTrousers.length > 0" :data-index="index" class="col-12 col-md-6 list-group mb-2 list-group-flush" v-for="(trouser, index) in sortedTrousers" :key="trouser.id">
+                            <ul v-if="!loading && sortedTrousers.length > 0" :data-index="index" class="col-12 col-md-6 list-group list-unstyled mb-2 list-group-flush" v-for="(trouser, index) in sortedTrousers" :key="trouser.id">
                                 <a :href="trouser.url" class="text-decoration-none search-results list-group-item bg-transparent d-flex align-items-center list-group-item-action">
-                                    {% comment %} <img :src="trouser.first_image.file" class="align-self-center img-fluid img-responsive img-thumbnail mr-3" > {% endcomment %}
                                     <picture>
                                         <source :srcset="trouser.first_image.file_sm" type="image/svg+xml" media="(max-width: 480px)">
                                         <source :srcset="trouser.first_image.file" type="image/svg+xml">
                                         <img :src="trouser.first_image.file" class="align-self-center img-fluid img-thumbnail mr-3" alt="...">
                                     </picture>
-                                    <div class="text-monospace d-flex flex-column justify-content-center" style="color:rgb(255,213,0,0.9);">
+                                    <div class="text-monospace d-flex flex-column justify-content-center" style="color: rgb(255, 213, 0, 0.9);">
                                         <p class="mt-0 h5">[[ trouser.name ]]</p>
                                         <p class="h6 mb-0">[[ trouser.color ]]</p>
                                         <p class="mb-0">[[ trouser.price|currency ]]</p>
