--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             {% if debug %}
             <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
             <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+            <link rel="stylesheet" href="{% static 'css/vegas.min.css' %}">
             <link rel="stylesheet" href="{% static 'css/all.min.css' %}"> 
             <link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
             {% comment %} <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}"> {% endcomment %}
