--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -42,9 +42,9 @@
 {% endblock style %}
 
 {% block content %}
-<section class="home d-flex align-items-center mb-5">
+<section id="home-slideshow" class="home d-flex align-items-center justify-content-center mb-5">
     <div class="container">
-        <div class="row align-items-center justify-content-center animate__animated animate__fadeInUp animate__delay-2s my-auto animate__slower">
+        <div class="row align-items-center justify-content-center animate__animated animate__fadeInUp animate__delay-2s my-auto animate__slow">
             <div class="">
                 <span class="text-white text-center">NEW ARRIVALS & RESTOCKS</span>
                 <h4 class="text-white font-weight-bold text-center mb-4">JUST IN.</h4>
@@ -173,6 +173,7 @@
 {% block javascript %}
 {% if debug %}
 <script src="{% static 'js/swiper.min.js' %}"></script>
+<script src="{% static 'js/vegas.min.js' %}"></script>
 <script src="{% static 'js/vue-awesome-swiper.js' %}"></script>
 {% else %}
 <script src="https://cdn.jsdelivr.net/npm/vue-awesome-swiper@4.1.1/dist/vue-awesome-swiper.min.js"></script>
@@ -180,6 +181,21 @@
 {% endif %}
 <script src="{% static 'js/vue-awesome-swiper.js' %}"></script>
 <script type="text/javascript">
+    $("#home-slideshow").vegas({
+        slides: [
+            { src: "{% static 'image/background/background.jpg' %}" },
+            { src: "{% static 'image/background/background2.jpg' %}" },
+            { src: "{% static 'image/background/background3.jpg' %}" },
+        ],
+        transition: ['zoomOut', 'flash'],
+        delay: 10000,
+        shuffle: true,
+        transitionDuration: 2000,
+        overlay: '/js/vegas/dist/overlays/03.png'
+        {% comment %} animation: 'kenburnsDownRight' {% endcomment %}
+    });
+    $('.vegas-timer').addClass('d-none')
+    $('.vegas-content-scrollable').addClass('d-flex align-items-center')
     Vue.use(VueAwesomeSwiper)
     const index = new Vue({
         el: '#index',
@@ -240,8 +256,6 @@
         },
         mounted(){
             window.scrollTo(0, 0);
-            console.log("lol")
-
         },
         computed: {
             numItems: function(){
