--- a/templates/error.html
+++ b/templates/error.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
-    <div class="row align-items-center justify-content-center">
+<div class="container flex-grow-1">
+    <div class="row my-auto align-items-center justify-content-center">
         <div class="col-md-8 my-5">
             <h1 class="text-center my-2">{{ error_message }}&nbsp;<i class="fas fa-theater-masks"></i></h1>
             <div class="d-flex justify-content-center">
